# ai-django-core

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  CHANGES.md  Dockerfile  LICENSE.md  MANIFEST.in  README.md  README.rst  pyproject.toml  readme.md  settings.py  setup.cfg  setup.py  tox.ini  update-mirror.ps1
.github/workflows/: ci.yml
ai/: MANIFEST.in  __init__.py  admin.py  context_processors.py  models.py
ai/converter/: choiceconverter.py  data.py  dateconverter.py  fileconverter.py  mediaconverter.py  stringconverter.py
ai/mail/backends/: whitelist_smtp.py
ai/mail/services/: tests.py
ai/middleware/: current_user.py
ai/mixins/: bleacher.py  forms.py  formset_view_mixin.py
ai/services/: custom_scrubber.py
ai/templatetags/: ai_date_tags.py  ai_email_tags.py  ai_file_tags.py  ai_helper_tags.py  ai_number_tags.py  ai_object_tags.py  ai_string_tags.py  file_tags_ai.py  math.py  object_tags_ai.py
ai/tests/: mixins.py  test_email_service.py  test_file_converter.py  test_middleware.py  test_scrubbing_service.py  test_string_converter.py  tests_math.py  tests_utils_date.py
ai/utils/: date.py  log_whodid.py  math.py  model.py  named_tuple.py  password_generator.py
ai/utils/antivirus/: __init__.py  cmultiav.cfg  exception.py  field.py  scanner.py  storage.py
ai_django_core/: __init__.py  admin.py  apps.py  checks.py  context_manager.py  managers.py  models.py
ai_django_core/admin/model_admins/: classes.py  inlines.py  mixins.py
ai_django_core/admin/views/: forms.py  mixins.py
ai_django_core/converter/: choiceconverter.py  fileconverter.py  mediaconverter.py  stringconverter.py
ai_django_core/drf/: fields.py  serializers.py  tests.py
ai_django_core/gitlab/: coverage.py
ai_django_core/graphql/forms/: mutations.py
ai_django_core/graphql/schemes/: mutations.py
ai_django_core/graphql/sentry/: utils.py  views.py
ai_django_core/graphql/tests/: base_test.py
ai_django_core/mail/: errors.py
ai_django_core/mail/backends/: whitelist_smtp.py
ai_django_core/mail/services/: base.py  tests.py
ai_django_core/management/commands/: validate_test_structure.py
ai_django_core/middleware/: current_user.py
ai_django_core/mixins/: bleacher.py  forms.py  models.py  validation.py  views.py
ai_django_core/selectors/: base.py  permission.py
ai_django_core/sentry/: helpers.py
ai_django_core/services/: custom_scrubber.py
ai_django_core/templatetags/: ai_date_tags.py  ai_email_tags.py  ai_file_tags.py  ai_number_tags.py  ai_string_tags.py
ai_django_core/tests/: errors.py  mixins.py  test_email_service.py  test_file_converter.py  test_log_whodid.py  test_math.py  test_middleware.py  test_string_converter.py  test_utils_date.py
ai_django_core/tests/structure_validator/: settings.py  test_structure_validator.py
ai_django_core/utils/: __init__.py  cache.py  date.py  file.py  log_whodid.py  math.py  media.py  model.py  named_tuple.py  string.py
ai_django_core/utils/antivirus/: README.md  exception.py  field.py  scanner.py  storage.py
ai_django_core/view-layer/: form_mixins.py  views.py
ai_django_core/view_layer/: form_mixins.py  formset_mixins.py  formset_view_mixin.py  htmx_mixins.py  mixins.py  views.py
ai_django_core/view_layer/tests/: mixins.py
docs/: conf.py  index.rst  introduction.md
docs/features/: admin.md  changelog.md  common_info.md  context_manager.md  context_processors.md  database_anonymisation.md  djangorestframework.md  gitlab.md  graphql.md  mail.md  managers.md  mixins.md  models.md  selectors.md  sentry.md  services.md  settings.md  setup.md  tests.md  unit_testing_for_mails.md  utils.rst  view-layer.md
docs/features/mixins/: views.md
docs/features/utils/: cache.md  date.md  math.md  model.md  named_tuple.md  string.md
scripts/: publish_and_update_mirror.ps1
testapp/: forms.py  managers.py  models.py  selectors.py  urls.py  views.py
testapp/api/: serializers.py  urls.py  views.py
testapp/migrations/: 0001_initial.py  0002_auto_210407.py  0003_modelwithfktoself.py  0004_auto_20210511_1343.py  0005_modelwithcleanmixin.py  0006_modelwithselector.py  0007_modelwithsavewithoutsignals.py
testapp/templates/: 403.html
tests/: test_admin_forms.py  test_admin_inlines.py  test_admin_model_admins_classes.py  test_admin_view_mixins.py  test_context_manager.py  test_email_service.py  test_email_test_service.py  test_mail_services.py  test_managers.py  test_math.py  test_middleware.py  test_mixins_models.py  test_models.py  test_rest_api_mixins.py  test_scrubbing_service.py  test_sentry_helper.py  test_string_converter.py  test_utils_cache.py  test_utils_date.py  test_utils_file.py  test_utils_model.py  test_utils_named_tuple.py  test_utils_string.py
tests/ambient_toolbox/: test_test_structure_validator.py
tests/drf/: test_fields.py
tests/mixins/: validation.py
tests/selectors/: test_base.py  test_permission.py
tests/tests/: test_mail_backends.py
tests/view_layer/: test_formset_mixins.py  test_htmx_response_mixin.py  test_meta_mixins.py  test_views.py
(+12 files in other folders)
