[metadata]
description-file = README.md
license-file = LICENSE.md

[flake8]
ignore-names=setUpTestData,setUp,setUpClass,tearDownClass,tearDown,assertResponseNoErrors,assertResponseHasErrors
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,json_data.py,manage.py
